--- a/Project/WebApplication1/Content/fwt.css
+++ b/Project/WebApplication1/Content/fwt.css
@@ -278,53 +278,10 @@
 /******************************************************************************************
 * PRODUCTS
 ******************************************************************************************/
-
-	/*#products {
-		width: 980px;
-		background: #fff;
-		margin: 0;
-		padding: 0;
-	}
-	
-	#products ul {
-		list-style: none;
-		margin: 0;
-		padding: 0;
-	}
-	
-	#products li {
-		width: 300px;
-		height: 300px;
-		display: block;
-		float: left;
-		margin: 0 0 20px 20px;
-		position: relative;
-		padding: 0;
-	}
-	
-	#products span {
-        text-align:left;
-		position: absolute;
-		width: 280px;
-		padding: 10px;
-		bottom: 0;
-		left: 0;
-		background: url(/Content/HinhAnh/bg.png);
-		color: #FFF;
-	}
-	
-	#products .buy {
-		float: left;
-		color: #fff;
-		text-transform: lowercase;
-		padding: 3px 5px;
-		background: #f6abd6;
-		border: none;
-		border-radius: 10px;
-		text-shadow: 1px 1px 1px #000;	
-		font-size: 11px;
-	}*/
-    /*--------------------*/
+#products
+{
+    width:1004px;
+}
     .products
   {
    position: relative;
@@ -342,8 +299,6 @@
  .pd-img
  {
   position: absolute;
-  /*top: 5%;
-  left: 5%;*/
   height: 100%;
   width: 100%;
  }
