--- a/Project/WebApplication1/Views/Home/Index.cshtml
+++ b/Project/WebApplication1/Views/Home/Index.cshtml
@@ -3,11 +3,11 @@
 }
 
 @{
-    for (int i = 0; i < 10; i++)
+    for (int i = 0; i < 5; i++)
     {
         
         <div class="products">
-            <img class="pd-img"  src="~/Content/HinhAnh/img03.jpg"  width="233" height="245"/>
+            <img class="pd-img"  src="~/Content/HinhAnh/img06.jpg"  width="233" height="245"/>
         <div class="pd-des"><br>
             <ul style="text-align:left;margin-left:20px;">
                 <li>Tên</li>
@@ -15,11 +15,31 @@
                 <li>Tác Giả</li>
                 <li>Nhà Sản Xuất</li>
                 <li>Mua Ngay</li>
+                <li>@Html.ActionLink("Xem Chi Tiết", "Detail", "Home")</li>
             </ul>
             </div>
-           
     </div>
 }
 }
+<br class="clear" />
+@{
+    for (int i = 0; i < 5; i++)
+    {
 
+        <div class="products">
+            <img class="pd-img" src="~/Content/HinhAnh/img04.jpg" width="233" height="245" />
+            <div class="pd-des">
+                <br>
+                <ul style="text-align:left;margin-left:20px;">
+                    <li>Tên</li>
+                    <li>Giá</li>
+                    <li>Tác Giả</li>
+                    <li>Nhà Sản Xuất</li>
+                    <li>Mua Ngay</li>
+                    <li>@Html.ActionLink("Xem Chi Tiết", "Detail", "Home")</li>
+                </ul>
+            </div>
+        </div>
+    }
+}
 <br class="clear" />
